tests/semantic_errors/undef_func.c
int main() {
    int x;
    x = foo(5); // ERROR: foo is not defined
    return x;
}